AX 컨설팅 페이지를 구글 폼으로 연결
AX 컨설팅 페이지에 방문하면 구글 폼으로 리다이렉션.

--- a/ax-consulting.html
+++ b/ax-consulting.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <p>Welcome!</p>
+    <p>Wait...</p>
+    <script>
+      setTimeout(() => {
+        location.href = 'https://forms.gle/mULbBXdG44rW6APy7';
+      }, 100);
+    </script>
     <script async data-id="101481700" src="//static.getclicky.com/js"></script>
   </body>
 </html>
